# poke-speare

./: .dockerignore  Cargo.toml  Dockerfile  README.md  swagger.yaml
.github/workflows/: general.yml
docs/: CONTRIBUTING.md
res/: charizard.json  shakespeare_response.json
src/: configuration.rs  lib.rs  main.rs  pokemon.rs  pokemon_response.rs  ps_error.rs  server_error.rs  shakespeare.rs
src/pokemon/: mod.rs
src/server/: configuration.rs  mod.rs  pokemon_response.rs
src/shakespeare/: mod.rs
