[package]
name = "poke-speare"
version = "0.1.1"
authors = ["MarcoIeni"]
edition = "2018"
description = "Pokemon descriptions by William Shakespeare. You know you need it."
repository = "https://github.com/MarcoIeni/poke-speare"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.7"
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0"
envy = "0.4"
lazy_static = "1.4"

[dev-dependencies]
wiremock = "0.2"
